--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ajax-client",
-  "version": "1.0.0",
-  "description": "Lightweight ajax client",
-  "main": "lib/ajaxclient.js",
+  "version": "1.0.1",
+  "description": "A simple ajax client with jQuery like ajax API for javascript",
+  "main": "lib/ajax-client.js",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack --config webpack.config.js",
