--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "ajax-client",
-  "version": "1.0.2",
+  "version": "1.2.0",
   "description": "A simple ajax client with jQuery like ajax API for javascript",
   "main": "lib/ajax-client.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "run-p start:api_server start:dev_server",
+    "start:api_server": "node ./test-util/TestServerInvoker.js",
+    "start:dev_server": "webpack-dev-server",
     "build": "webpack --config webpack.config.js",
     "release": "webpack --config webpack.config.js --mode production",
     "server": "node src_test_server/TestServer.js",
@@ -23,16 +25,17 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "express": "^4.17.1",
+    "jest": "^26.0.1",
+    "node-fetch": "^2.6.0",
+    "npm-run-all": "^4.1.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "babel-jest": "^26.0.1",
-    "jest": "^26.0.1"
+    "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "directories": {
     "test": "test"
   }
