--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ajax-client",
-  "version": "1.2.1",
-  "description": "A simple ajax client with jQuery like ajax API for javascript",
+  "version": "1.3.0",
+  "description": "A simple ajax client with 'jquery-like' API",
   "main": "lib/ajax-client.js",
   "scripts": {
     "start": "run-p start:api_server start:dev_server",
@@ -29,7 +29,7 @@
     "babel-loader": "^8.1.0",
     "express": "^4.17.1",
     "jest": "^26.0.1",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
