--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ajax-client",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "A simple ajax client with 'jquery-like' API",
   "main": "lib/ajax-client.js",
   "scripts": {
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/riversun/ajax-client#readme",
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.9.6",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
