--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "ajax-client",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "A simple ajax client with 'jquery-like' API",
   "main": "lib/ajax-client.js",
+  "module": "src/index.js",
+  "exports": {
+    "import": "./src/index.js"
+  },
+  "type": "module",
   "browserslist": [
     "since 2017-06"
   ],
   "scripts": {
     "start": "run-p start:api_server start:dev_server",
-    "start:api_server": "node ./test-util/TestServerInvoker.js",
+    "start:api_server": "node ./test-util/TestServerInvoker.cjs",
     "start:dev_server": "webpack-dev-server",
-    "build": "webpack --config webpack.config.js",
-    "release": "webpack --config webpack.config.js --mode production",
+    "build": "webpack --config webpack.config.cjs",
+    "release": "webpack --config webpack.config.cjs --mode production",
     "server": "node src_test_server/TestServer.js",
     "test": "jest -i"
   },
@@ -36,9 +41,9 @@
     "jest": "^26.6.3",
     "node-fetch": "^2.6.5",
     "npm-run-all": "^4.1.5",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "dependencies": {},
   "directories": {
